--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -43,10 +43,20 @@
                                                 tu contraseña?</a>
                                         </div>
                                         <br>
-                                        <div class="text-center">
+                                        <!-- <div class="text-center">
                                             <a class="small" href="{% url 'login:registrar' %}">Crea una cuenta</a>
 
+                                        </div> -->
+                                        <br>
+                                        <div class="text-center">
+                                            <SMALL>Correo Electronico: jesusalerojasguti@gmail.com</SMALL>
+
                                         </div>
+                                        <div class="text-center">
+                                            <small>Contraseña: contraseña123</small>
+
+                                        </div>
+
                                 </div>
                                     </form>
                             </div>
