--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -53,7 +53,7 @@
 
                                         </div>
                                         <div class="text-center">
-                                            <small>Contraseña: contraseña123</small>
+                                            <small>Contraseña: admin123</small>
 
                                         </div>
 
